@@ -1,3 +1,11 @@
+02 October 2007
+
+* The account/all warnings are now gone.
+
+01 October 2007
+
+* fdm 1.4 released.
+
 25 September 2007
 
 * For POP3 and IMAP, don't have a seperate state for waiting-to-purge. Mail
@@ -694,4 +702,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.170 2007-09-25 19:07:18 nicm Exp $
+$Id: CHANGES,v 1.171 2007-10-02 09:24:21 nicm Exp $
